# frog-engine

./: .clangd  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  TODO.md  devlog.md
.github/workflows/: build-3d.yml  build.yml  loc.yml  test.yml
engine/: CMakeLists.txt  functions.cmake
engine/assets/: main.vert  ui.frag
engine/docs/: Doxyfile  docs.html  docs_style.css
engine/libraries/: install.txt
engine/libraries/catch2/: url.txt
engine/libraries/glad/include/glad/: glad.h
engine/libraries/glad/src/: glad.c
engine/libraries/stb_image/: stb_image.c
engine/libraries/tiny_obj_loader/: url.txt
engine/src/core/: camera.hpp  engine.cpp  engine.hpp  engine2d.cpp  engine2d.hpp  engine3d.cpp  engine3d.hpp  engine_base.hpp  game_object.cpp  game_object.hpp  game_object2d.hpp  game_object_base.hpp  object_builder.cpp  object_builder.hpp  os_context.cpp  os_context.hpp  scene.cpp  scene.hpp  scene_manager.cpp  scene_manager.hpp  script.hpp  settings.hpp  state.hpp
engine/src/frog/: debug.hpp  frog.hpp
engine/src/frog/core/: async_jobs.hpp  engine2d.cpp  engine2d.hpp  engine3d.cpp  engine3d.hpp  engine_base.hpp  game_object.hpp  game_object2d.hpp  game_object_base.hpp  object_builder.cpp  object_builder.hpp  scene.hpp  scene_manager.hpp  script.hpp  settings.hpp  state.hpp  tag.hpp
engine/src/frog/core/2d/: camera.hpp  renderer.cpp  renderer.hpp
engine/src/frog/core/audio/: audio.cpp  audio.hpp
engine/src/frog/font/: atlas.cpp  atlas.hpp  base.hpp  truetype.cpp  truetype.hpp
engine/src/frog/geometry/: basic.hpp  camera.cpp  camera.hpp  circle.hpp  collision.hpp  element.hpp  fixed.hpp  general.cpp  general.hpp  matrix.hpp  objects.cpp  objects.hpp  optimization_grid.hpp  physics.cpp  physics.hpp  polar.hpp  rectangle.hpp  transform.cpp  transform.hpp  vector.hpp
engine/src/frog/gl/: location.hpp  program.cpp  program.hpp  texture.cpp  texture.hpp  vertex_objects.hpp
engine/src/frog/graphics/: assets.hpp  color.hpp  renderer3d.cpp  renderer3d.hpp  renderer_base.hpp  ui_element.hpp
engine/src/frog/gx2d/: animation.hpp  crop.hpp  renderer2d.hpp  sprite.hpp
engine/src/frog/gx3d/: include.hpp  location.hpp  material.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  program.cpp  program.hpp  shape.cpp  shape.hpp  texture.cpp  texture.hpp  vertex_objects.cpp  vertex_objects.hpp
engine/src/frog/lib2d/: core.hpp  error.cpp  events.cpp  events.hpp  font.cpp  font.hpp  fs.cpp  init.cpp  sdl_include.hpp  structs.cpp  structs.hpp  texture.cpp  texture.hpp  time.cpp  window.cpp  window.hpp
engine/src/frog/lib2d/audio/: audio.cpp  audio.hpp  channel.cpp  channel.hpp  mixer_init.hpp  sound.hpp
engine/src/frog/lib2d/include/: mixer.hpp
engine/src/frog/os/: input.cpp  input.hpp  timer.hpp  window.cpp  window.hpp  window_base.hpp  wrappers.hpp
engine/src/frog/scripts/: animation_script.hpp  ball2d.hpp  bound2d.hpp  button_action.hpp  button_script.hpp  button_style.hpp  button_utils.hpp  event.hpp  fps_script.hpp  keyframes.hpp  physics2d.hpp  simple_button_style.hpp  switch_scene_action.hpp  timer_script.hpp  viewport.hpp
engine/src/frog/scripts/button/: animation_style.hpp  button_action.hpp  button_script.hpp  button_style.hpp  button_utils.hpp  simple_button_style.hpp
engine/src/frog/scripts/button/actions/: log_action.hpp  switch_scene_action.hpp
engine/src/frog/utils/: assert.hpp  debug.hpp  exception.cpp  exception.hpp  fs.cpp  fs.hpp  ini.cpp  ini.hpp  ios.mm  load_file.hpp  mobile.cpp  mobile.hpp  profiler.hpp  ptr.hpp  rand_gen.hpp  string.cpp  string.hpp  string_builder.hpp  target.hpp  todo.hpp  utils.hpp
engine/src/geometry/: basic.hpp  camera.cpp  camera.hpp  circle.hpp  collision.hpp  element.hpp  general.cpp  general.hpp  matrix.hpp  objects.cpp  paddle.cpp  paddle.hpp  physics.hpp  polar.cpp  ray.hpp  rectangle.hpp  transform.cpp  transform.hpp  vector.hpp
engine/src/gl/: location.hpp  material.hpp  model.cpp  model.hpp  program.cpp  program.hpp  shape.cpp  shape.hpp  texture.hpp  vertex_objects.hpp
engine/src/graphics/: assets.hpp  color.hpp  include.hpp  location.hpp  material.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  program.cpp  program.hpp  renderer.cpp  renderer.hpp  renderer2d.hpp  renderer3d.cpp  renderer3d.hpp  shape.cpp  shape.hpp  texture.cpp  texture.hpp  ui_element.hpp  vertex_objects.cpp  vertex_objects.hpp
engine/src/gx2d/: renderer2d.hpp  sprite.hpp
engine/src/lib2d/: bits.hpp  core.hpp  error.cpp  events.cpp  events.hpp  fs.cpp  init.cpp  sdl_include.hpp  texture.cpp  texture.hpp  time.cpp  window.cpp  window.hpp
engine/src/new_sdl/: extensions.hpp  include.hpp  sdl_gl_window.hpp  sdl_renderer.hpp
engine/src/os/: error_box.cpp  error_box.hpp  input.cpp  input.hpp  timer.hpp  window.cpp  window.hpp  window_base.hpp  wrappers.hpp
engine/src/scripts/: fps_script.hpp
engine/src/utils/: debug.hpp  load_file.cpp
engine/tests/: makefile  test_engine.cpp  test_geometry.cpp  test_string.cpp  test_window.cpp  tests_engine.cpp  tests_main.cpp
engine/tests/fixed/: bench_fixed.cpp  test_fixed.cpp
game/: CMakeLists.txt
game/src/: ball_script.hpp  bounce_script.hpp  camera_script.hpp  constants.hpp  fps_script.hpp  game.cpp  game_over_script.hpp  game_script.hpp  paddle_script.hpp  player_script.hpp  powerup_script.hpp  quit_script.hpp  wall_script.cpp  wall_script.hpp
game2d/: CMakeLists.txt
game2d/src/: main.cpp
script/: build  build-all  build-wsl.sh  build.bat  build.sh  build_run.sh  count_lines.sh  docs.sh  libraries.sh  test.sh  work.sh
src/: ball_script.hpp  camera_script.hpp  fps_script.hpp  game_script.hpp  player_script.hpp  powerup_script.cpp  powerup_script.hpp  quit_script.hpp  wall_script.cpp  wall_script.hpp
